--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,5 +1,6 @@
 4.4.0-testing
 - use Conditional Define "Windows" for "win32"
+- use NSIS for making packages for windows
 4.4.0 (4.3.2)
 - HTML documentation is postprocessed throught HTML-Tidy
 - cgiquiz, mkquiz: never use target _blank, always use _top
