getquiz mentioned in manpage for mkquiz

--- a/doc/deutsch/mkquiz.1
+++ b/doc/deutsch/mkquiz.1
@@ -1,11 +1,13 @@
 .\" Process this file with
 .\" groff -man -Tlatin1 mkquiz.1
 .\"
-.TH "mkquiz" 1 "4.2.0" AKFQuiz
+.TH "mkquiz" 1 "4.4.0" AKFQuiz
 .nh
 
 .SH NAME
-mkquiz \- erzeugt HTML Dateien mit einem Quiz für akfquiz4.js
+mkquiz \- erzeugt HTML Dateien mit einem Quiz für akfquiz5.js
+.br
+getquiz \- kopiert die weiteren benötigten Dateien ins aktuelle Vezeichnis
 
 .SH SYNTAX
 .BI "mkquiz [" "Optionen" "] [" "Quiz-Dateien" "]"
