--- a/doc/english/mkquiz.1
+++ b/doc/english/mkquiz.1
@@ -5,6 +5,8 @@
 
 .SH NAME
 mkquiz \- creates HTML file with a quiz (needs akfquiz5.js)
+.br
+getquiz \- copy the files needed for the output into the current directory
 
 .SH SYNTAX
 .BI "mkquiz [" "options" "] [" "quiz-files" "]"
