quizstat accept more than just one file

--- a/doc/english/quizstat.1
+++ b/doc/english/quizstat.1
@@ -7,7 +7,7 @@
 quizstat \- get some statistics about an AKFQuiz file
 
 .SH SYNTAX
-.BI "quizstat " "[ [path/]file ]"
+.BI "quizstat " "[ [path/]files ]"
 
 .SH DESCRIPTION
 
