--- a/doc/deutsch/quizstat.1
+++ b/doc/deutsch/quizstat.1
@@ -4,7 +4,7 @@
 .TH "quizstat" 1 "4.4.0" AKFQuiz
 
 .SH NAME
-quizstat \- ein paar statistische Daten über AKFQuiz-Dateien
+quizstat \- statistische Daten über AKFQuiz-Dateien anzeigen
 
 .SH SYNTAX
 .BI "quizstat " "[ [Pfad/]Dateien ]"
