--- a/doc/english/akfquiz.5
+++ b/doc/english/akfquiz.5
@@ -403,8 +403,10 @@ http://akfquiz.nongnu.org/
 
 
 .SH "SEE ALSO"
+.BR quizstat (1)
 .BR scrquiz (1)
 .BR grquiz (1)
 .BR mkquiz (1)
 .BR cgiquiz (8)
+.BR diaquiz (1)
 .BR linequiz (1)
