--- a/doc/english/cgiquiz.8
+++ b/doc/english/cgiquiz.8
@@ -169,7 +169,9 @@ http://akfquiz.nongnu.org/
 
 .SH "SEE ALSO"
 .BR akfquiz (5)
+.BR quizstat (1)
 .BR mkquiz (1)
 .BR scrquiz (1)
 .BR grquiz (1)
+.BR diaquiz (1)
 .BR linequiz (1)
