--- a/doc/english/mkquiz.1
+++ b/doc/english/mkquiz.1
@@ -158,7 +158,9 @@ http://akfquiz.nongnu.org/
 
 .SH "SEE ALSO"
 .BR akfquiz (5)
+.BR quizstat (1)
 .BR scrquiz (1)
 .BR grquiz (1)
 .BR cgiquiz (8)
+.BR diaquiz (1)
 .BR linequiz (1)
