--- a/doc/deutsch/akfquiz.5
+++ b/doc/deutsch/akfquiz.5
@@ -437,8 +437,11 @@ http://akfquiz.nongnu.org/
 
 
 .SH "SIEHE AUCH"
+.BR quizstat (1)
 .BR scrquiz (1)
 .BR grquiz (1)
+.BR diaquiz (1)
 .BR mkquiz (1)
 .BR cgiquiz (8)
 .BR linequiz (1)
+
