--- a/doc/deutsch/cgiquiz.8
+++ b/doc/deutsch/cgiquiz.8
@@ -33,7 +33,7 @@ cgiquiz lets you use a quiz from an easy to write text-file. There is
 also an exam-mode, which can be used for real exams.
 
 The documentation for cgiquiz is not completed yet. If you have 
-questions, have a look at the internet site first (see below). 
+questions, have a look at the Internet site first (see below). 
 If you don't find the answer there, feel free to contact the 
 author directly.
 
@@ -169,7 +169,9 @@ http://akfquiz.nongnu.org/
 
 .SH "SEE ALSO"
 .BR akfquiz (5)
+.BR quizstat (1)
 .BR mkquiz (1)
 .BR scrquiz (1)
 .BR grquiz (1)
+.BR diaquiz (1)
 .BR linequiz (1)
