--- a/doc/deutsch/linequiz.1
+++ b/doc/deutsch/linequiz.1
@@ -127,7 +127,9 @@ http://akfquiz.nongnu.org/
 
 .SH "SIEHE AUCH"
 .BR akfquiz (5)
+.BR quizstat (1)
 .BR scrquiz (1)
 .BR grquiz (1)
+.BR diaquiz (1)
 .BR mkquiz (1)
 .BR cgiquiz (8)
