--- a/doc/deutsch/mkquiz.1
+++ b/doc/deutsch/mkquiz.1
@@ -165,7 +165,9 @@ http://akfquiz.nongnu.org/
 
 .SH "SIEHE AUCH"
 .BR akfquiz (5)
+.BR quizstat (1)
 .BR scrquiz (1)
 .BR grquiz (1)
 .BR cgiquiz (8)
+.BR diaquiz (1)
 .BR linequiz (1)
