--- a/doc/english/linequiz.1
+++ b/doc/english/linequiz.1
@@ -119,7 +119,9 @@ http://akfquiz.nongnu.org/
 
 .SH "SEE ALSO"
 .BR akfquiz (5)
+.BR quizstat (1)
 .BR scrquiz (1)
 .BR grquiz (1)
+.BR diaquiz (1)
 .BR mkquiz (1)
 .BR cgiquiz (8)
