--- a/doc/deutsch/diaquiz.1
+++ b/doc/deutsch/diaquiz.1
@@ -5,7 +5,7 @@
 .nh
 
 .SH NAME
-grquiz \- Quiz-Programm für Xdialog
+diaquiz \- Quiz-Programm für Xdialog
 
 .SH SYNTAX
 .BI "diaquiz [" Optionen "] [" "Eingabedatei" "]"
