--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,4 +1,5 @@
 4.4.0-testing
+- fixed 2 range check error conditions with newer gpc versions
 - school.png more pale
 - q-school.css, styles.pas: workaround for broken IE browser
 - link with pthread (NEEDPTHREAD) on GNU/Linux systems (fixes bug #18862)
