--- a/doc/english/quizstat.1
+++ b/doc/english/quizstat.1
@@ -34,11 +34,11 @@ for i in *.akfquiz; do echo; echo $i; quizstat $i; done
 
 .SH LICENSE
 
-Copyright \(co 2003-2006 Andreas K. Foerster
+Copyright \(co 2003-2006,2007 Andreas K. Foerster
 
-AKFQuiz is free software; you can redistribute it and/or modify
+AKFQuiz is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
-the Free Software Foundation; either version 2 of the License, or
+the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 AKFQuiz is distributed in the hope that it will be useful,
