use rel="nofollow" for user generated links

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,5 @@
+4.4.1-cvs
+- use rel="nofollow" for user generated links
 4.4.1
 - relicensed to GPLv3+
 - fixed 2 range check error conditions with newer gpc versions
