--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,5 +1,6 @@
 4.4.1-cvs
 - use rel="nofollow" for user generated links
+- relicensed to AGPLv3+
 4.4.1
 - relicensed to GPLv3+
 - fixed 2 range check error conditions with newer gpc versions
