--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,6 +1,7 @@
 4.4.1-cvs
-- use rel="nofollow" for user generated links
+- new program akfquizweb (CGI/Perl)
 - relicensed to AGPLv3+
+- use rel="nofollow" for user generated links
 4.4.1
 - relicensed to GPLv3+
 - fixed 2 range check error conditions with newer gpc versions
