cgiquiz.pas: always use POST method

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,4 +1,5 @@
 4.4.1-cvs
+- cgiquiz.pas: always use POST method
 - cgiquiz.pas: show elapsed time
 - qsys.pas, uakfquiz.pas: use Cardinal for Timestamps
 - htmlquiz.pas, cgiquiz.pas: simplify usage of label-tag
