--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,4 +1,5 @@
 4.4.1-cvs
+- cgiquiz.pas: dontCacheHttpHeader new procedure - many functions adapted
 - cgiquiz.pas: try to get the correct charset when displaying textfiles
 - qsys.pas: getQuizEncoding: new function
 - cgiquiz.pas: use cache for index (12h)
