--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,4 +1,5 @@
 4.4.1-git
+- switch to HTML5
 - documentation txt files will be generated in UTF-8 encoding
 - switched to Git
 - sdlgrph.pas: fix for 64Bit systems with FPC (no PackRecords)
