--- a/share/akfquiz/sound/README
+++ b/share/akfquiz/sound/README
@@ -1,19 +1,18 @@
 
-The files with the extension .ub are raw sound files.
-They are encoded in Mono, 22050Hz, 8-Bit (unsigned Byte, thus .ub).
+The files with the extension .ul are sound files.
+They are encoded in 16kHz, mu-law, mono.
 
 If you have the program sox installed, you can play them like this:
- $ play -r 22050 *.ub
+ $ play -r 16k introsnd.ul
 
 You can use sox to convert soundfiles from other formats:
- $ sox mysound.wav -r 22050 -c 1 introsnd.ub resample
+ $ sox mysound.wav -c 1 introsnd.ul rate 16k
 
 It is a good idea to sample the sounds with a higher quality first and
 resample them afterwards.
 
 
 The soundfiles 
-errorsnd.ub, infosnd.ub, introsnd.ub, rightsnd.ub, wrongsnd.ub, 
-neutralsnd.ub
+errorsnd.ul, infosnd.ul, introsnd.ul, rightsnd.ul, wrongsnd.ul,
+neutralsnd.ul
 of the original AKFQuiz package are put into the Public Domain.
-
