--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,4 +1,5 @@
-4.4.2-testing
+4.5.0-testing
+- diaquiz removed
 - grquiz: use mu-law encoded audio (sounds much better)
 - grquiz: all audio data is now in the executable
 - cgiquiz: exam mode is disabled by default
